--- a/index.html
+++ b/index.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html lang="es" data-bs-theme="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="" content="">
-    <meta name="" content="">
-    <meta name="" content="">
-    <link rel="stylesheet" href="./css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Brito Augusto" />
+    <meta
+      name="keywords"
+      content="poo, objetos, javascript, funciones, condicionales, css, html, mediaqueries, bom, dom"
+    />
+    <meta name="description" content="trabajo practico sobre dom y bom" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Trabajo Practico 5 -Ejercicio 5-</title>
-</head>
-<body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-</body>
+  </head>
+  <body>
+    <header>
+      <h1 class="my-4 text-center display-4 text-primary">Cronómetro</h1>
+    </header>
+    <main>
+      <div class="container text-center" id="cronometro">
+        <h2>00:00:00</h2>
+    </div>
+    <div class="text-center my-3">
+        <button id="iniciar" class="btn btn-primary">Iniciar</button>
+        <button id="pausar" class="btn btn-primary">Pausar</button>
+        <button id="reiniciar" class="btn btn-primary">Reiniciar</button>
+    </div>
+    </main>
+    <footer class="text-center bg-info">
+&copy;Derechos Reservados -Brito Augusto- 
+    </footer>
+    <script src="./js/index.js"></script>
+  </body>
 </html>
